k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp
  namespace: nodeapp
  labels:
    app: nodeapp
spec:
  selector:
    app: nodeapp
  ports:
  - name: http
    port: 80
    targetPort: 3000
  - name: metrics
    port: 3001
    targetPort: 3001
  type: ClusterIP
