k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodeapp-ingress
  namespace: nodeapp
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - aksscalingdemo.griffinbird.com
    secretName: tls-secret
  rules:
  - host: aksscalingdemo.griffinbird.com
    http:
      paths:
      - backend:
          serviceName: nodeapp
          servicePort: 80
        path: /
